# trading_system

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: BenchClient.h  bench_client.cpp  bench_client_rtt.cpp  main_client.cpp
src/: main_server.cpp  note.md  todo.md
src/common/: LockFreeQueue.h  NonCopyable.h  ThreadPool.h
src/engine/: MatchingEngine.cpp  MatchingEngine.h  MatchingEngineShard.cpp  MatchingEngineShard.h  OrderBook.cpp  OrderBook.h  RiskManager.h
src/net/: Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
src/protocol/: Protocol.h
